@@ -1,3 +1,9 @@
+2004-02-15  Dan Espen  <dane@mk.telcordia.com>
+
+	* documentation/faq/index.php:
+	* authors/index.php:
+	regenerated
+	
 2004-01-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* screenshots/desktops/An_Thi_Nguyen_Le-1152x864: 
